refactor(merchant-service): replace Collectors.toList() with toList() for stream conversion